<resources>
    <string name="app_name">My Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
<<<<<<< HEAD
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="Offers">Offers</string>
    <string name="my_carts">my_carts</string>
    <string name="description">A highly moisturizing, gently exfoliating blend with virgin coconut oil and delicately floral Moroccan rose, this luxurious body scrub leaves skin softer, smoother, and more nourished. It’s also vegan, cruelty-free, and formulated without gluten or silicone.</string>
=======
>>>>>>> 0b7457a1a26e7c0960b6ddc2c87ffb736c077cef
</resources>